--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <main>
              <nav class="borde" id="menu"> 
                 <a href="#" class="menu_activo">CEO</a>
-                <a href="#">Nueva empresa</a>
+                <a href="Empresa.html">Nueva empresa</a>
                 <a href="#">Cotizador</a>
              </nav>
              <section id="sec_quien_soy" >
@@ -62,7 +62,7 @@
             </section>
         <section class="borde" id="sec_herramientas">
                 <h1>Herramientas de mi dominio</h1>
-                <table border="1">
+                <table border="1" >
                     <head>
                         <tr>
                             <th>Photoshop</th>
