cambios con display grid

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8"/>
         <title>Diseño digital 3D</title>
         <link href="css/hoja-de-estilos.css" rel="stylesheet" type="text/css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>      
     <body>
         
@@ -12,7 +14,7 @@
             </header> 
             <main>
              <nav class="borde" id="menu"> 
-                <a href="#" class="menu_activo">CEO</a>
+                <a href="index.html" class="menu_activo">CEO</a>
                 <a href="Empresa.html">Nueva empresa</a>
                 <a href="#">Cotizador</a>
              </nav>
